--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "pretify": "prettier --config ./.prettierrc --write \"./{src,docs,config,scripts}/**/*.{html,js,jsx,ts,tsx,json,css,md}\"",
+    "check:prettier": "prettier --config ./.prettierrc \"./{src,docs,config,scripts}/**/*.{html,js,jsx,ts,tsx,json,css,md}\" --check"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "2.6.2"
   }
 }
