--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "pretify": "prettier --config ./.prettierrc --write \"./{src,docs,config,scripts}/**/*.{html,js,jsx,ts,tsx,json,css,md}\"",
-    "check:prettier": "prettier --config ./.prettierrc \"./{src,docs,config,scripts}/**/*.{html,js,jsx,ts,tsx,json,css,md}\" --check"
+    "check:prettier": "prettier --config ./.prettierrc \"./{src,docs,config,scripts}/**/*.{html,js,jsx,ts,tsx,json,css,md}\" --check",
+    "check:lint": "eslint \"./{src,docs,config,scripts}/**/*.{html,js,jsx,ts,tsx}\""
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +44,15 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.6.2"
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^8.15.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "prettier": "^2.6.2"
   }
 }
