--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "./",
+    "paths": {
+      "@ui-kit": [ "src/ui-kit"],
+    }
   },
   "include": [
     "src"
