--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.2",
     "react-refresh": "^0.11.0",
+    "react-router-dom": "^6.3.0",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
