--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,19 +8,14 @@ on: [pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x, 16.x]
-
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js version latest
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 16.x
           cache: 'npm'
-      - run: npm ci
-      - run: npm run build --if-present
+      - run: npm install
+      - run: npm run build 
       - run: npm run check:lint
       - run: npm run check:prettier
