--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: 16.x
           cache: 'npm'
-      - run: npm install
+      - run: npm ci
       - run: npm run build 
       - run: npm run check:lint
       - run: npm run check:prettier
