--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
+    "react-jwt": "^1.1.6",
     "react-redux": "^8.0.2",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.3.0",
