refactor: replace login header by simple header on common features and adding aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "paths": {
       "@ui-kit": ["src/ui-kit"],
       "@entities/*": ["src/entities/*"],
-      "@helpers/*": ["src/helpers/*"]
+      "@helpers/*": ["src/helpers/*"], 
+      "@common-features/*": ["src/common-features/*"],
     }
   },
   "include": ["src"]
