--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "browserslist": "^4.18.1",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "chart.js": "^3.9.1",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
     "cypress": "^10.4.0",
@@ -55,6 +56,7 @@
     "prompts": "^2.4.2",
     "react": "^18.1.0",
     "react-app-polyfill": "^3.0.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
