--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "^7.16.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.8.0",
     "@mui/x-data-grid": "^5.13.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
