--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
     "cypress": "^10.4.0",
+    "date-fns": "^2.29.3",
     "delay": "^5.0.0",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
