--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
     "local-storage": "^2.0.0",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.4.5",
     "notistack": "^2.0.5",
     "postcss": "^8.4.4",
