--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -15,5 +15,5 @@ jobs:
           # pass the Cypress Cloud record key as an environment variable
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           # pass GitHub token to allow accurately detecting a build vs a re-run build
-          GITHUB_TOKEN: ${{ secrets.cypress_TOKEN }}   
+          GITHUB_TOKEN: ${{ secrets.CYPRESS_TOKEN }}   
           CYPRESS_PROJECT_ID: ${{ secrets.PROJECT_ID }} 
