--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.16.0",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.8.0",
+    "@mui/material": "^5.11.14",
     "@mui/x-data-grid": "^5.13.1",
+    "@mui/x-date-pickers": "^6.0.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@reduxjs/toolkit": "^1.8.2",
     "@svgr/webpack": "^5.5.0",
